// Copyright 2020-2021 The FuseQuery Authors.
//
// Code is licensed under Apache License, Version 2.0.

syntax = "proto3";

package fuse.executor;

service Executor {
  // Check server is ok.
  rpc ping(PingRequest) returns (PingResponse) {}

  // Fetch partition from other nodes.
  rpc fetch_partition(FetchPartitionRequest) returns (FetchPartitionResponse) {}
}

message PingRequest {
  string name = 1;
}

message PingResponse {
  string message = 1;
}

message FetchPartitionRequest {
  string name = 1;
}

message FetchPartitionResponse {
  string message = 1;
}
